--- a/算法.md
+++ b/算法.md
@@ -940,6 +940,29 @@ def parent(self,p,i):
 [算法](evernote:///view/25058694/s43/791ab135-5532-4572-ae5a-5f22f6f62f7a/791ab135-5532-4572-ae5a-5f22f6f62f7a/)
 
 
+31、189. 旋转数组
+
+```
+class Solution:
+    def rotate(self, nums: List[int], k: int) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        n = len(nums)
+        k = k % n
+
+        def reverse(i,j):
+            while i < j:
+                nums[i],nums[j] = nums[j], nums[i]
+                i += 1
+                j -= 1
+        
+        reverse(0,n-1)
+        reverse(0,k-1)
+        reverse(k,n-1)
+        # print(nums)
+        
+```
 
 ---
 ### ATTACHMENTS
