--- a/算法/算法.md
+++ b/算法/算法.md
@@ -445,11 +445,8 @@ class Solution:
 归并排序| O(nlog2n)| O(nlog2n)| O(nlog2n)| O(n)| 稳定
 
 |
-|
-|
-|
-|
-
+排序方法| 时间复杂度(平均）| 时间复杂度（最坏）| 时间复杂度（最好）| 空间复杂度| 稳定性
+---|---|---|---|---|---
 计数排序| O(n+k)| O(n+k)| O(n+k)| O(n+k)| 稳定
 桶排序| O(n+k)| O(n^2)| O(n)| O(n+k)| 稳定
 基数排序| O(n*k)| O(n*k)| O(n*k)| O(n+k)| 稳定
