--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -355,28 +355,59 @@ if (setnx(key, 1) == 1){
 }
 ```
 
-
 上面的方法存在一些问题，比如
   1. SETNX 和 EXPIRE 非原子性：如果 SETNX 成功，在设置锁超时时间后，服务器挂掉、重启或网络问题等，导致 EXPIRE 命令没有执行，锁没有设置超时时间变成死锁。
-    * 解决办法：
-      *  Redis 2.6.12以上版本为set指令增加了可选参数，伪代码如下：set（key，1，30，NX）
-      * Lua脚本
+     * 解决办法：
+        *  Redis 2.6.12以上版本为set指令增加了可选参数，伪代码如下：set（key，1，30，NX）
+        * Lua脚本
   2. 锁误解除：如果线程 A 成功获取到了锁，并且设置了过期时间 30 秒，但线程 A 执行时间超过了 30 秒，锁过期自动释放，此时线程 B 获取到了锁；随后 A 执行完成，线程 A 使用 DEL 命令来释放锁，但此时线程 B 加的锁还没有执行完成，线程 A 实际释放的线程 B 加的锁。
-    * 解决办法
-      * 通过在 value 中设置当前线程加锁的标识，在删除之前验证 key 对应的 value 判断锁是否是当前线程持有。可生成一个 UUID 标识当前线程、因为判断和释放锁是两个独立操作，不是原子性。所以这块使用lua脚本
-      * 使用 lua 脚本做验证标识和解锁操作。
+     * 解决办法
+       * 通过在 value 中设置当前线程加锁的标识，在删除之前验证 key 对应的 value 判断锁是否是当前线程持有。可生成一个 UUID 标识当前线程、因为判断和释放锁是两个独立操作，不是原子性。所以这块使用lua脚本
+       * 使用 lua 脚本做验证标识和解锁操作。
   3. 超时解锁导致并发：如果线程 A 成功获取锁并设置过期时间 30 秒，但线程 A 执行时间超过了 30 秒，锁过期自动释放，此时线程 B 获取到了锁，线程 A 和线程 B 并发执行。
-    * 解决办法：
-      * 将过期时间设置足够长，确保代码逻辑在锁释放之前能够执行完成。
-      * 为获取锁的线程增加守护线程，为将要过期但未释放的锁增加有效时间。
+     * 解决办法：
+       * 将过期时间设置足够长，确保代码逻辑在锁释放之前能够执行完成。
+       * 为获取锁的线程增加守护线程，为将要过期但未释放的锁增加有效时间。
   4. 不可重入：当线程在持有锁的情况下再次请求加锁，如果一个锁支持一个线程多次加锁，那么这个锁就是可重入的。如果一个不可重入锁被再次加锁，由于该锁已经被持有，再次加锁会失败
-    * 解决办法：
-      * Redis 可通过对锁进行重入计数，加锁时加 1，解锁时减 1，当计数归 0 时释放锁。在本地记录记录重入次数
+     * 解决办法：
+       * Redis 可通过对锁进行重入计数，加锁时加 1，解锁时减 1，当计数归 0 时释放锁。在本地记录记录重入次数
   5. 无法等待锁释放：上述命令执行都是立即返回的，如果客户端可以等待锁释放就无法使用。
-    * 解决办法：
-      * *可以通过客户端轮询的方式解决该问题，当未获取到锁时，等待一段时间重新获取锁，直到成功获取锁或等待超时。这种方式比较消耗服务器资源，当并发量比较大时，会影响服务器的效率。
-      * 另一种方式是使用 Redis 的发布订阅功能，当获取锁失败时，订阅锁释放消息，获取锁成功后释放时，发送锁释放消息
+     * 解决办法：
+       * 可以通过客户端轮询的方式解决该问题，当未获取到锁时，等待一段时间重新获取锁，直到成功获取锁或等待超时。这种方式比较消耗服务器资源，当并发量比较大时，会影响服务器的效率。
+       * 另一种方式是使用 Redis 的发布订阅功能，当获取锁失败时，订阅锁释放消息，获取锁成功后释放时，发送锁释放消息
 
 
 12、简述 Redis 中如何防止缓存雪崩和缓存击穿
+
+* 缓存穿透：缓存穿透是指大量请求都查询数据库中不存在的数据，缓存和数据都查询不到数据，这使得请求每次都打到数据库上。缓存穿透往往是来自于故意攻击。
+
+  * 解决方案：
+
+	* 业务层数据校验：可以对请求数据进行校验，比如对于id<0的直接返回错误
+	* 缓存空数据：将相应的key在redis中设置对应value为null（或者其它能反馈错误的值），这样请求到来时缓存一样可以生效。（此时可以将空对象的过期时间设置较短，否则攻击者请求大量数据库中不存在id，同样会缓存多个null值，也会带来redis使用内存剧增的问题）
+	* 使用布隆过滤器：
+
+		* 布隆过滤器：位数组、
+			* 当一个元素加入过滤器时，使用多个hash函数对元素求值，并将位数组中对应位置为1；
+			* 判断一个元素是否在过滤器中时，使用多个函数对元素求值，并判断位数组对应位置是否为1。如果都为1，认为元素在过滤器中；否则认为元素不在过滤器中。
+* 缓存击穿：redis缓存中有一个key是大量请求同时访问的热点数据，如果突然这个key时间到了，那么大量的请求在缓存中获取不到该key，穿过缓存直接来到数据库导致数据库崩溃，这样因为单个key失效而穿过缓存到数据库称为缓存击穿
+  * 解决方案：
+  	* 使用互斥锁：当缓存失效时，引入一个锁，获得锁的线程去请求数据库，更新缓存，其余线程阻塞等待。
+			* 设置锁过期时间，防止死锁
+			* 为锁设置一个随机值，相同则删除锁，为了防止请求更新缓存的时间比锁的有效期还要长，导致在缓存更新过程中锁就失效了
+  	* 永远不过期：不设置过期时间
+
+		* 从缓存层面来看，确实没有设置过期时间，所以不会出现热点 key 过期后产生的问题，也就是“物理”不过期。
+		* 从功能层面来看，为每个 value 设置一个逻辑过期时间，当发现超过逻辑过期时间后，会使用单独的线程去构建缓存。
+		* 不足：会出现数据不一致的情况，这取决于应用方是否容忍这种不一致
+ 
+* 缓存雪崩：类似缓存击穿，区别在于多条数据同时在某一时间过期
+  * 解决方案：
+  * 随机化过期时间：为了避免缓存同时过期，可在设置缓存时添加随机时间，这样就可以极大的避免大量的缓存同时失效。
+  			
+  * 二级缓存指的是除了 Redis 本身的缓存，再设置一层缓存，当 Redis 失效之后，先去查询二级缓存。
+  		
+  	* 缓存预热：对于即将来临的大量请求，我们可以提前走一遍系统，将数据提前缓存在Redis中，并设置不同的过期时间。
+  		
+  	* 保证Redis服务高可用：主从、哨兵、集群
 
