--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -410,4 +410,25 @@ if (setnx(key, 1) == 1){
   	* 缓存预热：对于即将来临的大量请求，我们可以提前走一遍系统，将数据提前缓存在Redis中，并设置不同的过期时间。
   		
   	* 保证Redis服务高可用：主从、哨兵、集群
-
+  
+伪代码：
+```
+public String get(key) {  
+      String value = redis.get(key);  
+      if (value == null) { //代表缓存值过期  
+          //设置3min的超时，防止del操作失败的时候，下次缓存过期一直不能load db  
+          // 使用setnx实现锁的效果
+          if (redis.setnx(key_mutex, 1, 3 * 60) == 1) {  //代表设置成功  
+               // 这时候只允许一个线程去load db
+               value = db.get(key);  
+               redis.set(key, value, expire_secs);  
+               redis.del(key_mutex);  
+          } else {  //这个时候代表同时候的其他线程已经load db并回设到缓存了，这时候重试获取缓存值即可  
+               sleep(50);  
+               get(key);  //重试  
+          }  
+       } else {  
+         return value;        
+       }  
+}  
+```
