--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -120,6 +120,107 @@ MySQL 中默认的事务隔离级别就是 REPEATABLE READ，但是它通过 Nex
 
 
 5、什么情况下会发生死锁，如何解决死锁？
+  
+* 资源：大部分的死锁都和资源有关，在进程对设备、文件具有独占性（排他性）时会产生死锁。我们把这类需要排他性使用的对象称为资源(resource)。资源主要分为 可抢占资源和不可抢占资源
+* 可抢占资源和不可抢占资源:
+
+	* 可抢占资源(preemptable resource) 可以从拥有它的进程中抢占而不会造成其他影响，内存就是一种可抢占性资源，任何进程都能够抢先获得内存的使用权。
+	* 不可抢占资源(nonpreemtable resource) 指的是除非引起错误或者异常，否则进程无法抢占指定资源，这种不可抢占的资源比如有打印机，在进程执行调度的过程中，其他进程是不能得到该资源的
+
+
+	* 死锁的概念：是指两个或两个以上的进程在执行过程中，由于竞争资源或者由于彼此通信而造成的一种阻塞的现象，若无外力作用，它们都将无法推进下去。
+	* 死锁产生的原因：
+		* 竞争可消耗资源引起死锁:系统资源在分配时出现失误,进程间对资源的相互争夺而造成僵局.
+		* 进程推进顺序不当引起死锁 :多道程序运行时,进程推进顺序不合理
+
+
+	* 产生死锁的必要条件：
+
+		* 互斥条件：一个资源每次只能被一个进程使用。
+		* 请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+		* 不剥夺条件：进程已获得的资源，在末使用完之前，不能强行剥夺。
+		* 循环等待条件：若干进程之间形成一种头尾相接的循环等待资源关系。
+	* 死锁的预防  ：死锁的预防是保证系统不进入死锁状态的一种策略。它的基本思想是要求进程申请资源时遵循某种协议，从而打破产生死锁的四个必要条件中的一个或几个，保证系统不会进入死锁状态。
+
+		* 破坏互斥条件。即允许进程同时访问某些资源。但是，有的资源是不允许被同时访问的，像打印机等等，这是由资源本身的属性所决定的。所以，这种办法并无实用价值。
+		* 破坏不可剥夺条件。即允许进程强行从占有者那里夺取某些资源。就是说，当一个进程已占有了某些资源，它又申请新的资源，但不能立即被满足时，它必须释放所占有的全部资源，以后再重新申请。它所释放的资源可以分配给其它进程。这就相当于该进程占有的资源被隐蔽地强占了。这种预防死锁的方法实现起来困难，会降低系统性能
+		* 破坏请求与保持条件。可以实行资源预先分配策略。即进程在运行前一次性地向系统申请它所需要的全部资源。如果某个进程所需的全部资源得不到满足，则不分配任何资源，此进程暂不运行。只有当系统能够满足当前进程的全部资源需求时，才一次性地将所申请的资源全部分配给该进程。由于运行的进程已占有了它所需的全部资源，所以不会发生占有资源又申请资源的现象，因此不会发生死锁。
+
+			* 缺点：
+
+				* 在许多情况下，一个进程在执行之前不可能知道它所需要的全部资源。这是由于进程在执行时是动态的，不可预测的
+				* 资源利用率低。无论所分资源何时用到，一个进程只有在占有所需的全部资源后才能执行。即使有些资源最后才被该进程用到一次，但该进程在生存期间却一直占有它们，造成长期占着不用的状况。这显然是一种极大的资源浪费
+				* 降低了进程的并发性。因为资源有限，又加上存在浪费，能分配到所需全部资源的进程个数就必然少了
+		* 破坏循环等待条件，实行资源有序分配策略。采用这种策略，即把资源事先分类编号，按号分配，使进程在申请，占用资源时不会形成环路。所有进程对资源的请求必须严格按资源序号递增的顺序提出。进程占用了小号资源，才能申请大号资源，就不会产生环路，从而预防了死锁。这种策略与前面的策略相比，资源的利用率和系统吞吐量都有很大提高
+
+			* 缺点：
+
+				* 限制了进程对资源的请求，同时给系统中所有资源合理编号也是件困难事，并增加了系统开销
+				* 为了遵循按编号申请的次序，暂不使用的资源也需要提前申请，从而增加了进程对资源的占用时间
+	* 死锁的避免：
+
+		* 安全序列：  我们首先引入安全序列的定义：所谓系统是安全的，是指系统中的所有进程能够按照某一种次序分配资源，并且依次地运行完毕，这种进程序列{P1，P2，...，Pn}就是安全序列。如果存在这样一个安全序列，则系统是安全的；如果系统不存在这样一个安全序列，则系统是不安全的
+		* 安全序列{P1，P2，...，Pn}是这样组成的：若对于每一个进程Pi，它需要的附加资源可以被系统中当前可用资源加上所有进程Pj当前占有资源之和所满足，则{P1，P2，...，Pn}为一个安全序列，这时系统处于安全状态，不会进入死锁状态。 　
+		* 银行家算法
+	* 死锁的检测与恢复
+
+		* 最简单，最常用的方法就是进行系统的重新启动，不过这种方法代价很大，它意味着在这之前所有的进程已经完成的计算工作都将付之东流，包括参与死锁的那些进程，以及未参与死锁的进程。
+		* 撤消进程，剥夺资源。终止参与死锁的进程，收回它们占有的资源，从而解除死锁。这时又分两种情况：一次性撤消参与死锁的全部进程，剥夺全部资源；或者逐步撤消参与死锁的进程，逐步收回死锁进程占有的资源。一般来说，选择逐步撤消的进程时要按照一定的原则进行，目的是撤消那些代价最小的进程，比如按进程的优先级确定进程的代价；考虑进程运行时的代价和与此进程相关的外部作业的代价等因素。
+		* 进程回退策略，即让参与死锁的进程回退到没有发生死锁前某一点处，并由此点处继续执行，以求再次执行时不再发生死锁。虽然这是个较理想的办法，但是操作起来系统开销极大，要有堆栈这样的机构记录进程的每一步变化，以便今后的回退，有时这是无法做到的。
+		* 看门狗计数器:当线程正常运行的时候会每隔一段时间重置计数器，在没有发生死锁的情况下，一切都正常进行。一旦发生死锁，由于无法重置计数器导致定时器超时，这时程序会通过重启自身恢复到正常状态。
+
+
+死锁代码：
+
+```
+
+死锁代码
+要AB两个锁
+当A锁内部需要使用B锁，同时B锁内部需要使用A锁的时候，就要可能会出现死锁
+出现死所的解决方法：
+1.重构代码
+2.添加timeout时间
+下面代码中要可能返回下面内容，在同时认为锁被对方占用，同时释放
+Thread-1获取到a锁
+Thread-2获取到b锁
+over
+"""
+import time
+from threading import Thread, Lock
+
+
+lock_a = Lock()
+lock_b = Lock()
+
+
+class MyThread(Thread):
+    def run(self) -> None:
+        if lock_a.acquire():  # 如果a锁可以获取到，返回True,获取不到就阻塞
+            print(self.name + "获取到a锁")
+            time.sleep(0.1)
+            # if lock_b.acquire(timeout=0.01):  # 这里不加退出时间就会要可能出现死锁
+            if lock_b.acquire():  # 这里不加退出时间就会要可能出现死锁
+                print(self.name + "获取到b锁，现有ab锁")
+                lock_b.release()
+            lock_a.release()
+class MyThread1(Thread):
+    def run(self) -> None:
+        if lock_b.acquire():  # 如果b锁可以获取到，返回True,获取不到就阻塞
+            print(self.name + "获取到b锁")
+            time.sleep(0.1)
+            if lock_b.acquire():  # 这里不加退出时间就会要可能出现死锁
+                print(self.name + "获取到a锁，现有ab锁")
+                lock_a.release()
+            lock_b.release()
+if __name__ == '__main__':
+    t1 = MyThread()
+    t2 = MyThread1()
+    t1.start()
+    t2.start()
+    t1.join()
+    t2.join()
+    print("over")
+```
 6、简述脏读和幻读的发生场景，InnoDB 是如何解决幻读的？
   * 脏读： 在一个事务中，读取了其他事务未提交的数据。
     * 场景：当事务的隔离级别为 READ UNCOMMITED 时，我们在 SESSION 2 中插入的未提交数据在 SESSION 1 中是可以访问的。
