--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -533,3 +533,44 @@ public String get(key) {
        }  
 }  
 ```
+
+13、简述 Redis 的过期机制和内存淘汰策略
+过期策略：
+* 定时删除：在设置过期时间的同时，设置一个定时器，定时器的执行时间就是过期的时间点。
+
+  * 优点：对内存最友好，过期的键会以最快的被删除，释放内存。
+  * 缺点：对CPU时间最不友好，在大量键设置过期时间时，会创建大量的定时器，执行浪费CPU时间。
+* 惰性删除：不管键是否过期，只有每次取值的时候，才检查是否过期，过期就删除。
+
+		* 优点：对CPU时间最友好，取值时检查，只对当前键操作，不影响其他。
+		* 缺点：队内存不友好，可能会存在大量过期的未被使用的键值没有删除，无用数据占用了大量内存。
+* 定期删除：每隔一段时间，程序对数据库进行一次检查，过期的就删除。
+
+	* 优点：前两种方案的折中，通过减少执行频率来减少对CPU时间的影响，通过定期删除减少了对内存的浪费。
+	* 缺点：执行频率需要掌握好，不然太频繁则退化成定时删除，太少则退化成惰性删除。
+
+
+Redis采用的是惰性删除和定期删除两种策略
+
+持久化和复制对过期键的处理
+* RDB持久化：
+
+  * 主服务器：RDB文件无论是生成或载入，都会对过期键进行检查；生成时，过期键不写入；载入时，过期键会忽略。
+  * 从服务器：载入时，不会检查是否过期，数据都会载入。
+* AOF持久化：AOF文件写入时，键过期未删除，不影响；键过期已删除，则在AOF文件后追加DEL命令。
+* AOF重写：AOF重写过程中会进行检查，过期的键忽略。
+* 复制：主从模式下，由主服务器进行删除过期键，并显示的向从服务器发送DEL命令；从服务器自身不具备删除过期键值行为。
+
+
+
+内存淘汰机制:当Redis的内存使用达到设置的内存上限时就会触发内存淘汰机制，按照特定的淘汰算法进行数据清理，释放内存。
+具体的内存淘汰算法有一以下几种：
+* noeviction：不淘汰，内存不足时， 新写入会报错。
+* allkeys-lru：LRU，内存不足时，淘汰最近最少使用的key。
+* allkeys-random：随机，内存不足时，在所有key中随机选择一个key淘汰。
+* volatile-lru：过期时间内LRU，内存不足时，在设置了过期时间的key中，淘汰最近最少使用的key。
+* volatile-random：过期时间内随机，内存不足时，在设置了过期时间的key中，随机选择一个key淘汰。
+* volatile-ttl：更早过期时间，内存不足时，在设置了过期时间的key中，选择有更早过期时间的key淘汰。
+
+
+Redis默认使用的是LRU算法
