--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -574,3 +574,220 @@ Redis采用的是惰性删除和定期删除两种策略
 
 
 Redis默认使用的是LRU算法
+
+14、简述 Redis 中常见类型的底层数据结构
+Redis 所有的数据结构都是以唯一的 key 字符串作为名称，然后通过这个唯一 key 值来获取相应的 value 数据。不同类型的数据结构的差异就在于 value 的结构不一样。
+
+* string (字符串)：Redis 的字符串是动态字符串，是可以修改的字符串，内部结构实现上类似于 Java 的 ArrayList，采用预分配冗余空间的方式来减少内存的频繁分配
+
+* 常见用途：
+
+	* 用途示例：将用户信息结构体使用 JSON 序列化成字符串，然后将序列化后的字符串塞进 Redis 来缓存
+
+
+操作示意：
+```
+> set name codehole OK 
+> get name "codehole"
+> exists name (integer) 1 
+> del name (integer) 1 
+> get name (nil)
+
+# 批量键值对
+
+> set name1 codehole OK 
+> set name2 holycoder OK 
+> mget name1 name2 name3  # 返回一个列表 
+1) "codehole" 
+2) "holycoder" 
+3) (nil) 
+> mset name1 boy name2 girl name3 unknown 
+> mget name1 name2 name3 
+1) "boy" 
+2) "girl" 
+3) "unknown"
+
+# 过期和 set 命令扩展
+> set name codehole 
+> get name 
+"codehole" 
+> expire name 5 # 5s 后过期 ... # wait for 5s 
+> get name 
+(nil) 
+
+> setex name 5 codehole # 5s 后过期，等价于 set+expire > get name "codehole" ...
+ # wait for 5s 
+> get name 
+(nil) 
+> setnx name codehole # 如果 name 不存在就执行 set 创建
+ (integer) 1 
+> get name 
+"codehole" 
+> setnx name holycoder 
+(integer) 0 
+# 因为 name 已经存在，所以 set 创建不成功
+> get name "codehole" # 没有改变
+```
+* list (列表)：Redis 的列表相当于 Java 语言里面的 LinkedList，注意它是链表而不是数组
+
+* 操作时间
+
+  * 插入删除：O(1)
+  * 索引 O(n)
+  * 用途示例：
+
+* 异步队列：将需要延后处理的任务结构体序列化成字符串塞进 Redis 的列表，另一个线程从这个列表中轮询数据进行处理。
+* 底层实现：
+  * 用 ziplist（数据较少的时候），加上prev，next指针，Redis 将链表和 ziplist 结合起来组成了 quicklist。也就是将多个 ziplist 使用双向指针串起来使用 
+  * ziplist，也即是压缩列表。它将所有的元素紧挨着一起存储，分配的是一块连续的内存
+* 为什么这样设计：普通的链表需要的附加指针空间太大，会比较浪费空间，而且会加重内存的碎片化
+  * 好处：满足了快速的插入删除性能，又不会出现太大的空间冗余
+
+
+
+操作示意：
+```
+# 右边进左边出：队列
+> rpush books python java golang 
+(integer) 3 
+> llen books 
+(integer) 3 
+> lpop books 
+"python" 
+> lpop books 
+"java" 
+> lpop books 
+"golang"
+> lpop books
+(nil)
+
+# 右边进右边出：栈
+> rpush books python java golang 
+(integer) 3 
+> rpop books 
+"golang" 
+> rpop books 
+"java" 
+> rpop books 
+"python"
+> rpop books 
+(nil)
+
+```
+
+* hash (字典)：Redis 的字典相当于 Java 语言里面的 HashMap，它是无序字典。
+
+* Redis 的字典的值只能是字符串
+* 内部实现：数组 + 链表二维结构。第一维 hash 的数组位置碰撞时，就会将碰撞的元素使用链表串接起来。
+* Rehash策略：渐进式 rehash
+
+	* 渐进式 rehash：在 rehash 的同时，保留新旧两个 hash 结构，查询时会同时查询两个 hash 结构，然后在后续的定时任务中以及 hash 操作指令中，循序渐进地将旧 hash 的内容一点点迁移到新的 hash 结构中。当搬迁完成了，就会使用新的hash结构取而代之。当 hash 移除了最后一个元素之后，该数据结构自动被删除，内存被回收。
+* 缺点：hash 结构的存储消耗要高于单个字符串，
+* 优点：相比于字符串，不需要全部序列化整个对象，hash 可以对结构中的每个字段单独存储，
+
+```
+操作示意：
+
+> hset books java "think in java" # 命令行的字符串如果包含空格，要用引号括起来 (integer) 
+1 
+> hset books golang "concurrency in go" (integer) 
+1 
+> hset books python "python cookbook" (integer)
+1 
+> hgetall books # entries()，key 和 value 间隔出现 
+1) "java" 
+2) "think in java" 
+3) "golang" 
+4) "concurrency in go" 
+5) "python" 
+6) "python cookbook" 
+> hlen books 
+(integer) 3 
+> hget books java "think in java" 
+> hset books golang "learning go programming" # 因为是更新操作，所以返回 0 
+(integer) 0 
+> hget books golang 
+"learning go programming" 
+> hmset books java "effective java" python "learning python" golang "modern golang programming" # 批量 set OK
+```
+  * set (集合)：Redis 的集合相当于 Java 语言里面的 HashSet，它内部的键值对是无序的唯一的。它的内部实现相当于一个特殊的字典，字典中所有的 value 都是一个值NULL
+
+* 特点：
+
+	* 无序
+	* 唯一
+	* 相当于没有值的字典
+* 用途示例：存储活动中奖的用户 ID
+
+```
+操作示意：
+
+> sadd books python 
+(integer) 1 
+> sadd books python # 重复 
+(integer) 0 
+> sadd books java golang 
+(integer) 2 
+> smembers books # 注意顺序，和插入的并不一致，因为 set 是无序的 
+1) "java" 
+2) "python" 
+3) "golang" 
+> sismember books java # 查询某个 value 是否存在，相当于 contains(o) 
+(integer) 1
+> sismember books rust 
+(integer) 0 
+> scard books # 获取长度相当于 count() 
+(integer) 3 
+> spop books # 弹出一个 "java"
+```
+  * zset (有序集合)：类似于 Java 的 SortedSet 和 HashMap 的结合体，一方面它是一个 set，保证了内部 value 的唯一性，另一方面它可以给每个 value 赋予一个 score，代表这个 value 的排序权重
+
+   * 内部实现：跳表
+   * 用途示例：存储学生的成绩，value 值是学生的 ID，score 是他的考试成绩。我们可以对成绩按分数进行排序就可以得到他的名次
+
+```
+操作示意：
+
+> zadd books 9.0 "think in java" 
+(integer) 1 
+> zadd books 8.9 "java concurrency" 
+(integer) 1 
+> zadd books 8.6 "java cookbook" 
+(integer) 1 
+> zrange books 0 -1 # 按 score 排序列出，参数区间为排名范围 
+1) "java cookbook" 
+2) "java concurrency" 
+3) "think in java" 
+> zrevrange books 0 -1 # 按 score 逆序列出，参数区间为排名范围 
+1) "think in java" 
+2) "java concurrency"
+3) "java cookbook" 
+> zcard books # 相当于 count() 
+(integer) 3 
+> zscore books "java concurrency" # 获取指定 value 的 score 
+"8.9000000000000004" # 内部 score 使用 double 类型进行存储，所以存在小数点精度问题 
+> zrank books "java concurrency" # 排名 
+(integer) 1 
+> zrangebyscore books 0 8.91 # 根据分值区间遍历 zset 
+1) "java cookbook" 
+2) "java concurrency" 
+> zrangebyscore books -inf 8.91 withscores # 根据分值区间 (-∞, 8.91] 遍历 zset，同时返回分值。inf 代表 infinite，无穷大的意思。 
+1) "java cookbook" 
+2) "8.5999999999999996" 
+3) "java concurrency" 
+4) "8.9000000000000004" 
+> zrem books "java concurrency" # 删除 value 
+(integer) 1 
+> zrange books 0 -1 
+1) "java cookbook" 
+2) "think in java"
+```
+* 容器型数据结构的通用规则
+
+  * create if not exists
+  * drop if no elements
+* 过期时间：
+  * Redis 所有的数据结构都可以设置过期时间，时间到了，Redis 会自动删除相应的对象。
+  * 过期的单位：单位。比如一个 hash 结构的过期是整个 hash 对象的过期，而不是其中的某个子 key。
+  * tips：如果一个字符串已经设置了过期时间，然后你调用了 set 方法修改了它，它的过期时间会消失。
+
